$Id: NEWS,v 1.198 2002-06-27 22:36:25 castaglia Exp $

CVS
---------------------------------
- Bug 1407 - Removed unnecessary check for prior PORT/PASV in STOR
             PRE_CMD handler (RETR PRE_CMD handler did not have these checks)
- Added new Define, <IfDefine>, <IfModule> configuration directives, new
  command-line option -D (a la Apache)
- Bug 1556 - Restructuring the way signals are handled, so that signal handling
             functions are executed synchronously, not asynchronously
- Bug 1463 - Added reporting of dispatching to auth handlers at debug level 6
- Bug 1258 - Added STOU command handler
- Bug 1534 - Added LFS support
- Bug 1647 - Changed unnecessary use of umode_t to mode_t in mod_ls.
- Bug 1650 - Mergedown bug with LsDefaultOptions directive fixed.
- Bug 1306 - Added a TimeoutSession directive that can be used to set a maximum
             time limit on an entire session.
- Bug 1643 - Cleaned up several source code files.
- Bug 1569 - Cygwin support, added README.cygwin
- Bug 1171 - Added handling backslash-escaped newlines in configuration files,
             so that a directive can be split across multiple lines using
             a trailing \ before the newline character.
- Removed the deprecated AllowChmod and ShowDotFiles configuration directives.
- Bug 1655 - Added support for a -n option when listing directories.
- Bug 1502 - Added a lingering_close function.  As discussed in the bug
             report, this may cause issues with some clients; keep an eye
             for this, as the timeout (ten minutes) may be too long or short.
- Bug 1664 - Changed mod_sql to decline UID-to-name resolution if a UID
             field has been configured to NULL; similarly for GID.
- Removed mod_quota.c due to bugs, lack of maintainership.  Consult
  http://bugs.proftpd.org for a list of the mod_quota bugs.
- Bug 1667 - Moved definition of USE_SHADOW, AUTO_SHADOW macros from command
             line into config.h, with the other macros.
